--- a/09Ex.ipynb
+++ b/09Ex.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPzSJ6OCVpeBbKi63kewSuA"
+      "authorship_tag": "ABX9TyN59KNB1HWUG4FBRxXCejyX"
     },
     "kernelspec": {
       "name": "python3",
@@ -319,6 +319,45 @@
           },
           "metadata": {},
           "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ex módulo 4"
+      ],
+      "metadata": {
+        "id": "sjhPgLnfUDWW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "quadrado = []\n",
+        "for i in range(10):\n",
+        "  quadrado.append(i ** 2)\n",
+        "\n",
+        "quadrado"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Tsl128QFT_ux",
+        "outputId": "908f3803-e648-4b6d-e1b8-6b00a9dc2f28"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
         }
       ]
     }
